SVG icon theme: load icons via a custom MKVToolNix GUI theme
Part of the fix of #3335.

--- a/src/mkvtoolnix-gui/forms/header_editor/attached_file_page.ui
+++ b/src/mkvtoolnix-gui/forms/header_editor/attached_file_page.ui
@@ -157,8 +157,7 @@
         <string notr="true">&amp;Reset</string>
        </property>
        <property name="icon">
-        <iconset resource="../../qt_resources.qrc">
-         <normaloff>:/icons/16x16/edit-undo.png</normaloff>:/icons/16x16/edit-undo.png</iconset>
+        <iconset theme="edit-undo"/>
        </property>
       </widget>
      </item>
