--- a/src/mkvtoolnix-gui/forms/header_editor/attachments_page.ui
+++ b/src/mkvtoolnix-gui/forms/header_editor/attachments_page.ui
@@ -91,8 +91,7 @@
         <string>&amp;Add attachments</string>
        </property>
        <property name="icon">
-        <iconset resource="../../qt_resources.qrc">
-         <normaloff>:/icons/16x16/list-add.png</normaloff>:/icons/16x16/list-add.png</iconset>
+        <iconset theme="list-add"/>
        </property>
       </widget>
      </item>
