--- a/src/mkvtoolnix-gui/forms/header_editor/value_page.ui
+++ b/src/mkvtoolnix-gui/forms/header_editor/value_page.ui
@@ -222,8 +222,7 @@
         <string notr="true">PushButton</string>
        </property>
        <property name="icon">
-        <iconset resource="../../qt_resources.qrc">
-         <normaloff>:/icons/16x16/edit-undo.png</normaloff>:/icons/16x16/edit-undo.png</iconset>
+        <iconset theme="edit-undo"/>
        </property>
       </widget>
      </item>
