--- a/src/mkvtoolnix-gui/forms/info/job_settings_widget.ui
+++ b/src/mkvtoolnix-gui/forms/info/job_settings_widget.ui
@@ -126,8 +126,7 @@
           <string/>
          </property>
          <property name="icon">
-          <iconset resource="../../qt_resources.qrc">
-           <normaloff>:/icons/16x16/document-open.png</normaloff>:/icons/16x16/document-open.png</iconset>
+          <iconset theme="document-open"/>
          </property>
         </widget>
        </item>
