--- a/src/mkvtoolnix-gui/forms/info/tool.ui
+++ b/src/mkvtoolnix-gui/forms/info/tool.ui
@@ -178,8 +178,7 @@
                <string>&amp;Open Matroska or WebM file</string>
               </property>
               <property name="icon">
-               <iconset resource="../../qt_resources.qrc">
-                <normaloff>:/icons/16x16/document-open.png</normaloff>:/icons/16x16/document-open.png</iconset>
+               <iconset theme="document-open"/>
               </property>
              </widget>
             </item>
