--- a/src/mkvtoolnix-gui/forms/jobs/tool.ui
+++ b/src/mkvtoolnix-gui/forms/jobs/tool.ui
@@ -85,8 +85,7 @@
            <string/>
           </property>
           <property name="icon">
-           <iconset resource="../../qt_resources.qrc">
-            <normaloff>:/icons/16x16/arrow-up.png</normaloff>:/icons/16x16/arrow-up.png</iconset>
+           <iconset theme="arrow-up"/>
           </property>
          </widget>
         </item>
@@ -96,8 +95,7 @@
            <string/>
           </property>
           <property name="icon">
-           <iconset resource="../../qt_resources.qrc">
-            <normaloff>:/icons/16x16/arrow-down.png</normaloff>:/icons/16x16/arrow-down.png</iconset>
+           <iconset theme="arrow-down"/>
           </property>
          </widget>
         </item>
