--- a/src/mkvtoolnix-gui/forms/main_window/available_update_info_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/main_window/available_update_info_dialog.ui
@@ -148,8 +148,7 @@ p, li { white-space: pre-wrap; }
         <string>&amp;Download</string>
        </property>
        <property name="icon">
-        <iconset resource="../../qt_resources.qrc">
-         <normaloff>:/icons/16x16/applications-internet.png</normaloff>:/icons/16x16/applications-internet.png</iconset>
+        <iconset theme="applications-internet"/>
        </property>
       </widget>
      </item>
@@ -171,8 +170,6 @@ p, li { white-space: pre-wrap; }
   <tabstop>changeLog</tabstop>
   <tabstop>close</tabstop>
  </tabstops>
- <resources>
-  <include location="../../qt_resources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
