--- a/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/main_window/preferences_dialog.ui
@@ -489,8 +489,7 @@
                 <string notr="true"/>
                </property>
                <property name="icon">
-                <iconset resource="../../qt_resources.qrc">
-                 <normaloff>:/icons/16x16/list-add.png</normaloff>:/icons/16x16/list-add.png</iconset>
+                <iconset theme="list-add"/>
                </property>
               </widget>
              </item>
@@ -506,8 +505,7 @@
                 <string notr="true"/>
                </property>
                <property name="icon">
-                <iconset resource="../../qt_resources.qrc">
-                 <normaloff>:/icons/16x16/edit-entry.png</normaloff>:/icons/16x16/edit-entry.png</iconset>
+                <iconset theme="edit-entry"/>
                </property>
               </widget>
              </item>
@@ -523,8 +521,7 @@
                 <string notr="true"/>
                </property>
                <property name="icon">
-                <iconset resource="../../qt_resources.qrc">
-                 <normaloff>:/icons/16x16/list-remove.png</normaloff>:/icons/16x16/list-remove.png</iconset>
+                <iconset theme="list-remove"/>
                </property>
               </widget>
              </item>
@@ -687,8 +684,7 @@
                   <string/>
                  </property>
                  <property name="icon">
-                  <iconset resource="../../qt_resources.qrc">
-                   <normaloff>:/icons/16x16/document-open-folder.png</normaloff>:/icons/16x16/document-open-folder.png</iconset>
+                  <iconset theme="document-open-folder"/>
                  </property>
                 </widget>
                </item>
@@ -947,8 +943,7 @@
                     <string notr="true"/>
                    </property>
                    <property name="icon">
-                    <iconset resource="../../qt_resources.qrc">
-                     <normaloff>:/icons/16x16/list-add.png</normaloff>:/icons/16x16/list-add.png</iconset>
+                    <iconset theme="list-add"/>
                    </property>
                   </widget>
                  </item>
@@ -958,8 +953,7 @@
                     <string notr="true"/>
                    </property>
                    <property name="icon">
-                    <iconset resource="../../qt_resources.qrc">
-                     <normaloff>:/icons/16x16/list-remove.png</normaloff>:/icons/16x16/list-remove.png</iconset>
+                    <iconset theme="list-remove"/>
                    </property>
                   </widget>
                  </item>
@@ -969,8 +963,7 @@
                     <string notr="true"/>
                    </property>
                    <property name="icon">
-                    <iconset resource="../../qt_resources.qrc">
-                     <normaloff>:/icons/16x16/document-edit.png</normaloff>:/icons/16x16/document-edit.png</iconset>
+                    <iconset theme="document-edit"/>
                    </property>
                   </widget>
                  </item>
@@ -999,8 +992,7 @@
                     <string notr="true"/>
                    </property>
                    <property name="icon">
-                    <iconset resource="../../qt_resources.qrc">
-                     <normaloff>:/icons/16x16/document-revert.png</normaloff>:/icons/16x16/document-revert.png</iconset>
+                    <iconset theme="document-revert"/>
                    </property>
                   </widget>
                  </item>
@@ -1160,8 +1152,7 @@
                 <string/>
                </property>
                <property name="icon">
-                <iconset resource="../../qt_resources.qrc">
-                 <normaloff>:/icons/16x16/view-choose.png</normaloff>:/icons/16x16/view-choose.png</iconset>
+                <iconset theme="view-choose"/>
                </property>
               </widget>
              </item>
@@ -1447,8 +1438,7 @@
                 <string notr="true"/>
                </property>
                <property name="icon">
-                <iconset resource="../../qt_resources.qrc">
-                 <normaloff>:/icons/16x16/edit-undo.png</normaloff>:/icons/16x16/edit-undo.png</iconset>
+                <iconset theme="edit-undo"/>
                </property>
               </widget>
              </item>
@@ -1614,8 +1604,7 @@
                    <string/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../../qt_resources.qrc">
-                    <normaloff>:/icons/16x16/document-open-folder.png</normaloff>:/icons/16x16/document-open-folder.png</iconset>
+                   <iconset theme="document-open-folder"/>
                   </property>
                  </widget>
                 </item>
@@ -2405,8 +2394,7 @@
                 <string>&amp;Add action</string>
                </property>
                <property name="icon">
-                <iconset resource="../../qt_resources.qrc">
-                 <normaloff>:/icons/16x16/list-add.png</normaloff>:/icons/16x16/list-add.png</iconset>
+                <iconset theme="list-add"/>
                </property>
               </widget>
              </item>
