--- a/src/mkvtoolnix-gui/forms/main_window/prefs_run_program_widget.ui
+++ b/src/mkvtoolnix-gui/forms/main_window/prefs_run_program_widget.ui
@@ -64,8 +64,7 @@
             <string>E&amp;xecute now</string>
            </property>
            <property name="icon">
-            <iconset resource="../../qt_resources.qrc">
-             <normaloff>:/icons/16x16/system-run.png</normaloff>:/icons/16x16/system-run.png</iconset>
+            <iconset theme="system-run"/>
            </property>
           </widget>
          </item>
@@ -188,8 +187,7 @@
                <string notr="true"/>
               </property>
               <property name="icon">
-               <iconset resource="../../qt_resources.qrc">
-                <normaloff>:/icons/16x16/document-open.png</normaloff>:/icons/16x16/document-open.png</iconset>
+               <iconset theme="document-open"/>
               </property>
              </widget>
             </item>
@@ -199,8 +197,7 @@
                <string>Add &amp;variable</string>
               </property>
               <property name="icon">
-               <iconset resource="../../qt_resources.qrc">
-                <normaloff>:/icons/16x16/list-add.png</normaloff>:/icons/16x16/list-add.png</iconset>
+               <iconset theme="list-add"/>
               </property>
              </widget>
             </item>
@@ -254,8 +251,7 @@ p, li { white-space: pre-wrap; }
                  <string notr="true"/>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../qt_resources.qrc">
-                  <normaloff>:/icons/16x16/document-open.png</normaloff>:/icons/16x16/document-open.png</iconset>
+                 <iconset theme="document-open"/>
                 </property>
                </widget>
               </item>
