--- a/src/mkvtoolnix-gui/forms/merge/executable_location_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/merge/executable_location_dialog.ui
@@ -66,8 +66,7 @@
         <string notr="true"/>
        </property>
        <property name="icon">
-        <iconset resource="../../qt_resources.qrc">
-         <normaloff>:/icons/16x16/document-open.png</normaloff>:/icons/16x16/document-open.png</iconset>
+        <iconset theme="document-open"/>
        </property>
       </widget>
      </item>
