--- a/src/mkvtoolnix-gui/forms/merge/tab.ui
+++ b/src/mkvtoolnix-gui/forms/merge/tab.ui
@@ -111,8 +111,7 @@
                     <string/>
                    </property>
                    <property name="icon">
-                    <iconset resource="../../qt_resources.qrc">
-                     <normaloff>:/icons/16x16/arrow-up.png</normaloff>:/icons/16x16/arrow-up.png</iconset>
+                    <iconset theme="arrow-up"/>
                    </property>
                   </widget>
                  </item>
@@ -122,8 +121,7 @@
                     <string/>
                    </property>
                    <property name="icon">
-                    <iconset resource="../../qt_resources.qrc">
-                     <normaloff>:/icons/16x16/arrow-down.png</normaloff>:/icons/16x16/arrow-down.png</iconset>
+                    <iconset theme="arrow-down"/>
                    </property>
                   </widget>
                  </item>
@@ -210,8 +208,7 @@
                     <string/>
                    </property>
                    <property name="icon">
-                    <iconset resource="../../qt_resources.qrc">
-                     <normaloff>:/icons/16x16/arrow-up.png</normaloff>:/icons/16x16/arrow-up.png</iconset>
+                    <iconset theme="arrow-up"/>
                    </property>
                   </widget>
                  </item>
@@ -221,8 +218,7 @@
                     <string/>
                    </property>
                    <property name="icon">
-                    <iconset resource="../../qt_resources.qrc">
-                     <normaloff>:/icons/16x16/arrow-down.png</normaloff>:/icons/16x16/arrow-down.png</iconset>
+                    <iconset theme="arrow-down"/>
                    </property>
                   </widget>
                  </item>
@@ -549,8 +545,7 @@
                             <string/>
                            </property>
                            <property name="icon">
-                            <iconset resource="../../qt_resources.qrc">
-                             <normaloff>:/icons/16x16/document-open.png</normaloff>:/icons/16x16/document-open.png</iconset>
+                            <iconset theme="document-open"/>
                            </property>
                           </widget>
                          </item>
@@ -748,8 +743,7 @@
                              <string/>
                             </property>
                             <property name="icon">
-                             <iconset resource="../../qt_resources.qrc">
-                              <normaloff>:/icons/16x16/document-open.png</normaloff>:/icons/16x16/document-open.png</iconset>
+                             <iconset theme="document-open"/>
                             </property>
                            </widget>
                           </item>
@@ -973,8 +967,7 @@
                          <string/>
                         </property>
                         <property name="icon">
-                         <iconset resource="../../qt_resources.qrc">
-                          <normaloff>:/icons/16x16/character-set.png</normaloff>:/icons/16x16/character-set.png</iconset>
+                         <iconset theme="character-set"/>
                         </property>
                        </widget>
                       </item>
@@ -1151,8 +1144,7 @@
                    <string/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../../qt_resources.qrc">
-                    <normaloff>:/icons/16x16/document-open.png</normaloff>:/icons/16x16/document-open.png</iconset>
+                   <iconset theme="document-open"/>
                   </property>
                  </widget>
                 </item>
@@ -1162,8 +1154,7 @@
                    <string notr="true"/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../../qt_resources.qrc">
-                    <normaloff>:/icons/16x16/folder-favorites.png</normaloff>:/icons/16x16/folder-favorites.png</iconset>
+                   <iconset theme="folder-favorites"/>
                   </property>
                  </widget>
                 </item>
@@ -1194,8 +1185,7 @@
                    <string/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../../qt_resources.qrc">
-                    <normaloff>:/icons/16x16/document-open.png</normaloff>:/icons/16x16/document-open.png</iconset>
+                   <iconset theme="document-open"/>
                   </property>
                  </widget>
                 </item>
@@ -1219,8 +1209,7 @@
                    <string/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../../qt_resources.qrc">
-                    <normaloff>:/icons/16x16/document-open.png</normaloff>:/icons/16x16/document-open.png</iconset>
+                   <iconset theme="document-open"/>
                   </property>
                  </widget>
                 </item>
@@ -1363,8 +1352,7 @@
                    <string/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../../qt_resources.qrc">
-                    <normaloff>:/icons/16x16/view-choose.png</normaloff>:/icons/16x16/view-choose.png</iconset>
+                   <iconset theme="view-choose"/>
                   </property>
                  </widget>
                 </item>
@@ -1418,8 +1406,7 @@
                    <string/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../../qt_resources.qrc">
-                    <normaloff>:/icons/16x16/document-open.png</normaloff>:/icons/16x16/document-open.png</iconset>
+                   <iconset theme="document-open"/>
                   </property>
                  </widget>
                 </item>
@@ -1447,8 +1434,7 @@
                    <string/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../../qt_resources.qrc">
-                    <normaloff>:/icons/16x16/document-open.png</normaloff>:/icons/16x16/document-open.png</iconset>
+                   <iconset theme="document-open"/>
                   </property>
                  </widget>
                 </item>
@@ -1476,8 +1462,7 @@
                    <string/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../../qt_resources.qrc">
-                    <normaloff>:/icons/16x16/document-open.png</normaloff>:/icons/16x16/document-open.png</iconset>
+                   <iconset theme="document-open"/>
                   </property>
                  </widget>
                 </item>
@@ -1551,8 +1536,7 @@
                    <string/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../../qt_resources.qrc">
-                    <normaloff>:/icons/16x16/character-set.png</normaloff>:/icons/16x16/character-set.png</iconset>
+                   <iconset theme="character-set"/>
                   </property>
                  </widget>
                 </item>
@@ -1644,8 +1628,7 @@
                    <string/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../../qt_resources.qrc">
-                    <normaloff>:/icons/16x16/document-open.png</normaloff>:/icons/16x16/document-open.png</iconset>
+                   <iconset theme="document-open"/>
                   </property>
                  </widget>
                 </item>
@@ -1819,8 +1802,7 @@
                    <string/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../../qt_resources.qrc">
-                    <normaloff>:/icons/16x16/arrow-up.png</normaloff>:/icons/16x16/arrow-up.png</iconset>
+                   <iconset theme="arrow-up"/>
                   </property>
                  </widget>
                 </item>
@@ -1830,8 +1812,7 @@
                    <string/>
                   </property>
                   <property name="icon">
-                   <iconset resource="../../qt_resources.qrc">
-                    <normaloff>:/icons/16x16/arrow-down.png</normaloff>:/icons/16x16/arrow-down.png</iconset>
+                   <iconset theme="arrow-down"/>
                   </property>
                  </widget>
                 </item>
@@ -1973,8 +1954,7 @@
         <string>&amp;Add source files</string>
        </property>
        <property name="icon">
-        <iconset resource="../../qt_resources.qrc">
-         <normaloff>:/icons/16x16/list-add.png</normaloff>:/icons/16x16/list-add.png</iconset>
+        <iconset theme="list-add"/>
        </property>
        <property name="popupMode">
         <enum>QToolButton::MenuButtonPopup</enum>
@@ -1990,8 +1970,7 @@
         <string>Sta&amp;rt multiplexing</string>
        </property>
        <property name="icon">
-        <iconset resource="../../qt_resources.qrc">
-         <normaloff>:/icons/16x16/media-playback-start.png</normaloff>:/icons/16x16/media-playback-start.png</iconset>
+        <iconset theme="media-playback-start"/>
        </property>
        <property name="popupMode">
         <enum>QToolButton::MenuButtonPopup</enum>
@@ -2007,8 +1986,7 @@
         <string>Add to job &amp;queue</string>
        </property>
        <property name="icon">
-        <iconset resource="../../qt_resources.qrc">
-         <normaloff>:/icons/16x16/task-delegate.png</normaloff>:/icons/16x16/task-delegate.png</iconset>
+        <iconset theme="task-delegate"/>
        </property>
        <property name="popupMode">
         <enum>QToolButton::MenuButtonPopup</enum>
