--- a/src/mkvtoolnix-gui/forms/util/language_dialog.ui
+++ b/src/mkvtoolnix-gui/forms/util/language_dialog.ui
@@ -194,8 +194,7 @@
                <string/>
               </property>
               <property name="icon">
-               <iconset resource="../../qt_resources.qrc">
-                <normaloff>:/icons/16x16/list-add.png</normaloff>:/icons/16x16/list-add.png</iconset>
+               <iconset theme="list-add"/>
               </property>
              </widget>
             </item>
@@ -221,8 +220,7 @@
                <string/>
               </property>
               <property name="icon">
-               <iconset resource="../../qt_resources.qrc">
-                <normaloff>:/icons/16x16/list-add.png</normaloff>:/icons/16x16/list-add.png</iconset>
+               <iconset theme="list-add"/>
               </property>
              </widget>
             </item>
@@ -255,8 +253,7 @@
                <string notr="true"/>
               </property>
               <property name="icon">
-               <iconset resource="../../qt_resources.qrc">
-                <normaloff>:/icons/16x16/list-add.png</normaloff>:/icons/16x16/list-add.png</iconset>
+               <iconset theme="list-add"/>
               </property>
              </widget>
             </item>
@@ -310,7 +307,7 @@
            <string notr="true"/>
           </property>
           <property name="pixmap">
-           <pixmap resource="../../qt_resources.qrc">:/icons/16x16/dialog-ok-apply.png</pixmap>
+           <pixmap resource="../../qt_resources.qrc">:/icons/mkvtoolnix-gui/16x16/dialog-ok-apply.png</pixmap>
           </property>
          </widget>
         </item>
@@ -320,7 +317,7 @@
            <string notr="true"/>
           </property>
           <property name="pixmap">
-           <pixmap resource="../../qt_resources.qrc">:/icons/16x16/dialog-error.png</pixmap>
+           <pixmap resource="../../qt_resources.qrc">:/icons/mkvtoolnix-gui/16x16/dialog-error.png</pixmap>
           </property>
          </widget>
         </item>
