--- a/src/mkvtoolnix-gui/forms/util/language_display_widget.ui
+++ b/src/mkvtoolnix-gui/forms/util/language_display_widget.ui
@@ -42,8 +42,7 @@
       <string notr="true"/>
      </property>
      <property name="icon">
-      <iconset resource="../../qt_resources.qrc">
-       <normaloff>:/icons/16x16/list-remove.png</normaloff>:/icons/16x16/list-remove.png</iconset>
+      <iconset theme="list-remove"/>
      </property>
     </widget>
    </item>
@@ -53,8 +52,7 @@
       <string notr="true"/>
      </property>
      <property name="icon">
-      <iconset resource="../../qt_resources.qrc">
-       <normaloff>:/icons/16x16/edit-entry.png</normaloff>:/icons/16x16/edit-entry.png</iconset>
+      <iconset theme="edit-entry"/>
      </property>
     </widget>
    </item>
