--- a/src/mkvtoolnix-gui/forms/util/side_by_side_multi_select.ui
+++ b/src/mkvtoolnix-gui/forms/util/side_by_side_multi_select.ui
@@ -88,8 +88,7 @@
           <string/>
          </property>
          <property name="icon">
-          <iconset resource="../../qt_resources.qrc">
-           <normaloff>:/icons/16x16/arrow-right.png</normaloff>:/icons/16x16/arrow-right.png</iconset>
+          <iconset theme="arrow-right"/>
          </property>
         </widget>
        </item>
@@ -105,8 +104,7 @@
           <string/>
          </property>
          <property name="icon">
-          <iconset resource="../../qt_resources.qrc">
-           <normaloff>:/icons/16x16/arrow-left.png</normaloff>:/icons/16x16/arrow-left.png</iconset>
+          <iconset theme="arrow-left"/>
          </property>
         </widget>
        </item>
@@ -138,8 +136,7 @@
           <string notr="true"/>
          </property>
          <property name="icon">
-          <iconset resource="../../qt_resources.qrc">
-           <normaloff>:/icons/16x16/edit-undo.png</normaloff>:/icons/16x16/edit-undo.png</iconset>
+          <iconset theme="edit-undo"/>
          </property>
         </widget>
        </item>
