--- a/src/mkvtoolnix-gui/forms/merge/tool.ui
+++ b/src/mkvtoolnix-gui/forms/merge/tool.ui
@@ -230,8 +230,7 @@
                    <string>&amp;New</string>
                   </property>
                   <property name="icon">
-                   <iconset resource="../../qt_resources.qrc">
-                    <normaloff>:/icons/16x16/document-new.png</normaloff>:/icons/16x16/document-new.png</iconset>
+                   <iconset theme="document-new"/>
                   </property>
                  </widget>
                 </item>
@@ -257,8 +256,7 @@
                    <string>&amp;Open settings</string>
                   </property>
                   <property name="icon">
-                   <iconset resource="../../qt_resources.qrc">
-                    <normaloff>:/icons/16x16/document-open.png</normaloff>:/icons/16x16/document-open.png</iconset>
+                   <iconset theme="document-open"/>
                   </property>
                  </widget>
                 </item>
