--- a/src/mkvtoolnix-gui/forms/util/string_list_configuration_widget.ui
+++ b/src/mkvtoolnix-gui/forms/util/string_list_configuration_widget.ui
@@ -56,8 +56,7 @@
         <string/>
        </property>
        <property name="icon">
-        <iconset resource="../../qt_resources.qrc">
-         <normaloff>:/icons/16x16/list-add.png</normaloff>:/icons/16x16/list-add.png</iconset>
+        <iconset theme="list-add"/>
        </property>
       </widget>
      </item>
@@ -67,8 +66,7 @@
         <string/>
        </property>
        <property name="icon">
-        <iconset resource="../../qt_resources.qrc">
-         <normaloff>:/icons/16x16/list-remove.png</normaloff>:/icons/16x16/list-remove.png</iconset>
+        <iconset theme="list-remove"/>
        </property>
       </widget>
      </item>
