SVG icon theme: replace custom icon for subtitles with SVG from Oxygen
Part of the fix of #3335.

--- a/src/mkvtoolnix-gui/qt_resources.qrc
+++ b/src/mkvtoolnix-gui/qt_resources.qrc
@@ -29,7 +29,6 @@
   <file alias='icons/mkvtoolnix-gui/16x16@2/mkvtoolnix-gui@2x.png'>../../share/icons/32x32/mkvtoolnix-gui.png</file>
   <file alias='icons/mkvtoolnix-gui/16x16/sort_ascending.png'>../../share/icons/16x16/sort_ascending.png</file>
   <file alias='icons/mkvtoolnix-gui/16x16/sort_descending.png'>../../share/icons/16x16/sort_descending.png</file>
-  <file alias='icons/mkvtoolnix-gui/16x16/subtitles.png'>../../share/icons/16x16/subtitles.png</file>
   <file alias='icons/mkvtoolnix-gui/24x24/mkvextract.png'>../../share/icons/24x24/mkvextract.png</file>
   <file alias='icons/mkvtoolnix-gui/24x24@2/mkvextract@2x.png'>../../share/icons/48x48/mkvextract.png</file>
   <file alias='icons/mkvtoolnix-gui/24x24/mkvinfo.png'>../../share/icons/24x24/mkvinfo.png</file>
@@ -107,6 +106,7 @@
   <file alias='icons/mkvtoolnix-gui/scalable/document-revert.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/document-revert.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/document-save-as.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/document-save-as.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/document-save.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/document-save.svg</file>
+  <file alias='icons/mkvtoolnix-gui/scalable/draw-text.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/draw-text.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/edit-copy.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/edit-copy.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/edit-entry.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/edit-entry.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/edit-undo.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/edit-undo.svg</file>
@@ -163,6 +163,7 @@
   <file alias='icons/mkvtoolnix-gui/scalable/small/16x16/document-save-as.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/16x16/document-save-as.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/16x16/document-save.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/16x16/document-save.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/16x16/documentinfo.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/16x16/documentinfo.svg</file>
+  <file alias='icons/mkvtoolnix-gui/scalable/small/16x16/draw-text.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/16x16/draw-text.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/16x16/draw-triangle2.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/16x16/draw-triangle2.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/16x16/draw-triangle4.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/16x16/draw-triangle4.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/16x16/edit-copy.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/16x16/edit-copy.svg</file>
@@ -218,6 +219,7 @@
   <file alias='icons/mkvtoolnix-gui/scalable/small/22x22/document-revert.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/22x22/document-revert.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/22x22/document-save-as.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/22x22/document-save-as.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/22x22/document-save.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/22x22/document-save.svg</file>
+  <file alias='icons/mkvtoolnix-gui/scalable/small/22x22/draw-text.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/22x22/draw-text.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/22x22/draw-triangle2.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/22x22/draw-triangle2.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/22x22/draw-triangle4.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/22x22/draw-triangle4.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/22x22/edit-copy.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/22x22/edit-copy.svg</file>
@@ -256,6 +258,7 @@
   <file alias='icons/mkvtoolnix-gui/scalable/small/32x32/document-import.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/32x32/document-import.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/32x32/document-open-folder.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/32x32/document-open-folder.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/32x32/document-open.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/32x32/document-open.svg</file>
+  <file alias='icons/mkvtoolnix-gui/scalable/small/32x32/draw-text.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/32x32/draw-text.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/32x32/draw-triangle2.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/32x32/draw-triangle2.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/32x32/draw-triangle4.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/32x32/draw-triangle4.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/32x32/edit-select-all.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/32x32/edit-select-all.svg</file>
@@ -289,6 +292,7 @@
   <file alias='icons/mkvtoolnix-gui/scalable/small/48x48/document-open.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/48x48/document-open.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/48x48/document-save-as.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/48x48/document-save-as.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/48x48/document-save.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/48x48/document-save.svg</file>
+  <file alias='icons/mkvtoolnix-gui/scalable/small/48x48/draw-text.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/48x48/draw-text.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/48x48/draw-triangle2.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/48x48/draw-triangle2.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/48x48/draw-triangle4.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/48x48/draw-triangle4.svg</file>
   <file alias='icons/mkvtoolnix-gui/scalable/small/48x48/edit-copy.svg' compress='9' compress-algo='zstd'>../../share/icons/scalable/small/48x48/edit-copy.svg</file>
